<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ID"
            android:imeOptions="actionNext"
            android:textSize="20sp" >
        </EditText>

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_firstName"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:textSize="20sp" >
        </EditText>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastName"
            android:imeOptions="actionDone"
            android:inputType="textPersonName|textCapWords"
            android:textSize="20sp" >
        </EditText>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionDone"
            android:inputType="textPersonName|textCapWords"
            android:textSize="20sp" >
        </EditText>

        <Button
            android:id="@+id/addContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/button_add_contact"
            android:textSize="20sp" >
        </Button>
    </LinearLayout>

</LinearLayout>