<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content">
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20dp"
			android:layout_marginTop="20dp" android:gravity="left"
			android:text="@string/promptMultipleContactUrl" android:textColor="@android:color/white"
			android:textSize="16sp" />

		<EditText android:id="@+id/multiple_contact_url_text"
			android:layout_width="500dp" android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" android:textSize="24sp" />

		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20dp"
			android:gravity="left" android:text="@string/promptSingleContactUrl"
			android:textColor="@android:color/white" android:textSize="16sp" />

		<EditText android:id="@+id/single_contact_url_text"
			android:layout_width="500dp" android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" android:textSize="24sp" />

		<Button android:id="@+id/save_URLs_Button"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:text="@string/saveURLsButton" android:textSize="20sp" />



	</LinearLayout>
</ScrollView>