<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/idTableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/idLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:text="@string/label_id"
                    android:textSize="20sp" >
                </TextView>

                <EditText
                    android:id="@+id/idEditText"
                    style="@style/ContactTextView"
                    android:textColor="#8b8989"
                    android:textSize="20sp" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/firstNameTableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/firstNameLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:text="@string/label_firstName"
                    android:textSize="20sp" >
                </TextView>

                <EditText
                    android:id="@+id/firstNameEditText"
                    style="@style/ContactTextView"
                    android:textColor="#8b8989"
                    android:textSize="20sp" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/lastNameTableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lastNameLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:text="@string/label_lastName"
                    android:textSize="20sp" >
                </TextView>

                <EditText
                    android:id="@+id/lastNameEditText"
                    style="@style/ContactTextView"
                    android:textColor="#8b8989"
                    android:textSize="20sp" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/emailTableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/emailLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:text="@string/label_email"
                    android:textSize="20sp" >
                </TextView>

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/ContactTextView"
                    android:textColor="#8b8989"
                    android:textSize="20sp" >
                </EditText>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/deleteContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/button_delete_contact"
            android:textSize="20sp" >
        </Button>
    </LinearLayout>

</LinearLayout>